--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -2,13 +2,13 @@
 @import 'buttons.scss';
 @import "layout/layout.scss";
 @import "module/module.scss";
-@import "module/topBar.scss";
-@import "module/game.scss";
-@import "module/type.scss";
-@import "module/types.scss";
-@import "module/scene.scss";
-@import "module/performance.scss";
-@import "module/perSecond.scss";
+@import "module/topBarModule.scss";
+@import "module/gameModule.scss";
+@import "module/typeModule.scss";
+@import "module/typesModule.scss";
+@import "module/sceneModule.scss";
+@import "module/performanceModule.scss";
+@import "module/perSecondModule.scss";
 @import "views/treeView.scss";
 @import "views/propertyEditor/propertyEditor.scss";
 @import "views/propertyEditor/propertyEditorTypes.scss";
