--- a/builds/openeditplay.editor.css
+++ b/builds/openeditplay.editor.css
@@ -332,10 +332,30 @@ div.topToolSelectionButtons {
   left: 20vw;
 }
 div.selectionView {
+  display: inline-block;
+  position: absolute;
+  transform: translateY(-50%);
+
+  height: 80%;
+
   padding: 5px 20px;
   top: 50%;
-  left: 62vw;
+  right: 10px;
   text-align: center;
+
+  border: 1px solid transparent;
+}
+div.selectionView.selectionFocused {
+  border: 1px solid black;
+  box-shadow: inset 0 1px 3px 0px #e8e8e8, 0 0 2px black;
+
+  border-radius: 4px;
+}
+div.selectionView:not(.selectionFocused) div.selectionButtons {
+  display: none;
+}
+div.selectionView div.selectionButtons .fa-trash:hover {
+  color: #ff745f;
 }
 @keyframes blinkPlayButton {
   0% { opacity: 1 }
@@ -499,17 +519,6 @@ div.topSceneControlButton:last-of-type {
 }
 .sceneEditorSideBarButtons .movement {
   opacity: 0.5;
-}
-.sceneContextButtons {
-  float: right;
-  clear: both;
-  margin-top: 20px;
-}
-.sceneContextButtons.hidden {
-  display: none;
-}
-.sceneContextButtons .fa-trash:hover {
-  color: #ff745f;
 }
 .module-scene.noScene .pauseInfo, .module-scene.noScene .sceneEditorSideBarButtons {
   display: none;
