--- a/builds/openeditplay.editor.css
+++ b/builds/openeditplay.editor.css
@@ -336,7 +336,7 @@ div.selectionView {
   position: absolute;
   transform: translateY(-50%);
 
-  height: 80%;
+  height: 50px;
 
   padding: 5px 20px;
   top: 50%;
@@ -366,6 +366,10 @@ div.topSceneControlButtons.topSceneControlButtonsPaused div.button[controlButton
   color: white;
   text-shadow: 0 0 20px white;
   animation: blinkPlayButton 2s 0s infinite;
+}
+div.topSceneControlButtons div.button[controlButtonType='rec'] {
+  color: #ff3333;
+  text-shadow: 0 0 17px white;
 }
 div.topSceneControlButton {
   display: inline-block;
@@ -578,6 +582,36 @@ div.topSceneControlButton:last-of-type {
 }
 .perSecondItemValue {
 }
+div.animationModule table.animationTimeline {
+  width: 100%;
+  user-select: none;
+  border-collapse: collapse;
+  position: relative;
+}
+div.animationModule th.frameHeader {
+  border-right: 1px solid gray;
+  height: 30px;
+}
+div.animationModule th.frameHeader.selected {
+  background: rgba(255, 255, 255, 0.15);
+}
+div.animationModule button.recordButton {
+  color: white;
+  text-shadow: 0px 0px 4px red;
+}
+div.animationModule button.recordButton i {
+  color: #ff3333;
+  text-shadow: 0px 0px 4px white;
+}
+div.animationModule td.trackFrame {
+  border-top: 1px solid black;
+  text-align: center;
+}
+div.animationModule td.trackFrame:first-child {
+  text-align: left;
+  padding-left: 10px;
+  width: auto !important;
+}
 .jstree-default .jstree-search {
   color: #ccc8c6;
   left: 10px;
@@ -675,6 +709,7 @@ div.nameCell {
   overflow: hidden;
   position: relative;
   flex: 1;
+  padding-top: 2px;
 }
 div.nameCell .infoI {
   position: absolute;
@@ -865,7 +900,7 @@ body, html {
   /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
   color: #ccc8c6;
   font-size: 14px;
-  font-weight: 200;
+  /* font-weight: 200;*/
   letter-spacing: 1px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: 1px 1px 1px #1a1a1a;
