--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -9,6 +9,7 @@
 @import "module/sceneModule.scss";
 @import "module/performanceModule.scss";
 @import "module/perSecondModule.scss";
+@import "module/animationModule.scss";
 @import "views/treeView.scss";
 @import "views/propertyEditor/propertyEditor.scss";
 @import "views/propertyEditor/propertyEditorTypes.scss";
@@ -27,7 +28,7 @@ body, html {
   //font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   color: $editor-text-color;
   font-size: 14px;
-  font-weight: 200;
+  // font-weight: 200;
   letter-spacing: 1px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-shadow: 1px 1px 1px #1a1a1a;
