--- a/src/editor/buttons.scss
+++ b/src/editor/buttons.scss
@@ -63,7 +63,7 @@ button.button.greenButton:hover {
   text-shadow: 0 0 2px #00ff22;
 }
 
-button.button i.fa {
+button.button i.fas {
   position: relative;
   left: -3px;
   top: 0px;
