--- a/src/editor/editor.scss
+++ b/src/editor/editor.scss
@@ -1,5 +1,5 @@
-@import 'variables.scss';
-@import 'buttons.scss';
+@import "variables.scss";
+@import "buttons.scss";
 @import "layout/layout.scss";
 @import "module/module.scss";
 @import "module/topBarModule.scss";
@@ -14,6 +14,7 @@
 @import "views/propertyEditor/propertyEditor.scss";
 @import "views/propertyEditor/propertyEditorTypes.scss";
 @import "views/popup/Popup.scss";
+@import "widget/widget.scss";
 
 * {
   box-sizing: border-box;
