--- a/src/editor/widget/widget.scss
+++ b/src/editor/widget/widget.scss
@@ -5,8 +5,66 @@ div.widgetRoot {
 }
 
 
-i.widgetControl {
+.widgetRoot .widgetControl {
+    text-shadow: none;
+    opacity: 0.8;
 }
-i.widgetControl:hover {
-    text-shadow: 0 0 1px;
+.widgetRoot:not(.dragging) .widgetControl:hover,
+.widgetRoot.dragging .widgetControl.dragging {
+    // text-shadow: 0 0 1px;
+    text-shadow: 0 0 4px;
+    opacity: 1;
+}
+
+.widgetRoot .widget {
+    position: absolute;
+    user-select: none;
+}
+
+.widgetRoot .scaleWidget .widgetControl {
+    font-size: 15px;
+}
+
+.widgetRoot .angleWidget .widgetControl {
+    font-size: 53px;
+    border: 4px solid;
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 60px;
+    height: 60px;
+}
+.widgetRoot:not(.dragging) .angleWidget .widgetControl:hover,
+.widgetRoot.dragging .angleWidget .widgetControl.dragging {
+    opacity: 0.8;
+    box-shadow: 0 0 8px 0px, 0 0 8px 0px inset;
+}
+
+.widgetRoot .widgetLine {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(-50%);
+    height: 2px;
+    opacity: 0.5;
+}
+
+.widgetRoot .widgetControl {
+    position: absolute;
+    font-size: 30px;
+}
+
+.widgetRoot .positionWidget .widgetControl {
+    color: yellow;
+    opacity: 0.6;
+    // left: 0.5px;
+    // top: 1px;
+    border-radius: 50%;
+    background: yellow;
+    width: 35px;
+    height: 35px;
+}
+.widgetRoot:not(.dragging) .positionWidget .widgetControl:hover,
+.widgetRoot.dragging .positionWidget .widgetControl.dragging {
+    opacity: 0.8;
+    box-shadow: 0 0 8px 4px;
 }
