--- a/public/css/openeditplay.homepage.css
+++ b/public/css/openeditplay.homepage.css
@@ -69,7 +69,10 @@ body {
     position: relative;
     background: black;
     text-align: center;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 #topAreaBackground {
